﻿更新履歴

==== Ver 1.1.8-beta1(2014/xx/xx)
 * NEW: ファイルメニューに「ツイートURLを開く」を追加
  - https://twitter.com/*****/statuses/1234567890 のような形式のURLを直接開くことが出来ます
 * NEW: プロフィール画像の右クリックメニューに「再読み込み」を追加
 * CHG: 投稿するツイートの末尾の全角スペースを除去しない
 * FIX: サムネイル画像の取得をキャンセルするとエラーが発生する場合がある問題の修正
 * FIX: サムネイル画像の読み込み中に画面の更新が遅くなる問題の修正
 * FIX: 壊れたプロフィール画像を取得したり不安定な回線で読み込みを行うと操作不能な状態になることがある問題の修正
 * FIX: Twitter API から取得したツイートのエンティティ情報が不正な場合の対策を追加 (thx @nyamph_pf!)
 * FIX: サロゲートペアを含むツイートのリンク化処理が正しく行われない問題の修正
 * FIX: https のURLを含むツイートの文字数カウントが正しくない問題の修正
 * FIX: ツイート内の改行を2文字としてカウントしてしまう問題の修正
 * FIX: TEMP 環境変数に不正なパスが設定されているユーザーへの対策を追加

==== Ver 1.1.7(2014/01/16)
 * NEW: ダイレクトメッセージに添付された画像のサムネイル表示に対応
 * CHG: 「通信にHTTPSを使用する」の設定項目を削除
   - Twitter APIへの接続にSSLが必須となったため、常にHTTPSを使用して通信します
 * CHG: Twitterのプロフィールページなどをブラウザで開く際のURLのスキームを http:// から https:// に変更しました
 * CHG: 既にサービスが終了しているOutputz関連の設定項目を削除
 * FIX: 設定ファイルの保存時に Setting*.xml.tmp ファイルが残ったまま設定が保存できなくなる問題の修正
 * FIX: UserStreamsの list_destroyed イベントを受信した際に未知のイベントとして扱われる問題を修正 (thx @5px)
 * FIX: ツイート選択時にサムネイル枠のスクロールバー選択位置を初期化するように修正 (thx @5px!)

==== Ver 1.1.6(2013/12/12)
 * UriFormatException のエラーが多数報告されたため修正版をリリースしました

 * CHG: 発言一覧等に使用するフォントのデフォルトが誤って変更されていた問題を修正
 * FIX: 不正なURLを含むツイートを受信するとエラーが発生する問題を修正
 * FIX: 短い名前のタブの幅が極端に狭く表示されてしまう問題を修正

==== Ver 1.1.5(2013/12/12)
 * NEW: ディスプレイのDPI設定に応じて適切にスケーリングが行われます
 * NEW: OpenTween派生クライアントなどから設定ファイルをコピーした場合に、存在しない設定を削除せず保持するようになります
 * NEW: タブやボタン等のUIに任意のフォントを指定できます
   - フォントによっては一部レイアウトが崩れるため隠し設定にしています
   - SettingLocal.xml に <FontUIGlobalStr>Meiryo UI, 9pt</FontUIGlobalStr> のように記述することで使えます
   - 「メイリオ」のように日本語のフォント名を指定する場合は UTF-8 で保存するのを忘れずに
 * NEW: 起動オプション /configDir:<dirpath> を使用して設定ファイルの参照先を変更できるようになります
   - 別々の設定ファイルを使用するプロセスであれば複数のOpenTweenを同時起動することが可能です
 * NEW: Imgur への画像投稿（匿名アップロードのみ）に対応しました
 * CHG: PublicSearchタブ内のツイートのメニューでも「返信元ステータスを開く」が使用できるよう修正 (thx @5px!)
 * CHG: 発言詳細欄内のリンクのツールチップに、デコードされた状態のURLが表示されるようになります
 * FIX: 取得したプロフィール画像が壊れていた場合のエラー処理を改善 (thx @7mencho!)
 * FIX: サムネイル情報の取得に失敗した場合のエラー処理を改善