@@ -4,6 +4,8 @@
  * NEW: ファイルメニューに「ツイートURLを開く」を追加
   - https://twitter.com/*****/statuses/1234567890 のような形式のURLを直接開くことが出来ます
  * NEW: プロフィール画像の右クリックメニューに「再読み込み」を追加
+ * NEW: ブラウザからのD&Dに対応 (Firefox, Chrome で動作します)
+  - アドレスバーの Favicon やリンクなどを D&D すると投稿欄にURLとタイトルが入力されます
  * CHG: 投稿するツイートの末尾の全角スペースを除去しない
  * FIX: サムネイル画像の取得をキャンセルするとエラーが発生する場合がある問題の修正
  * FIX: サムネイル画像の読み込み中に画面の更新が遅くなる問題の修正
